@@ -632,3 +632,4 @@
 	- filter unprintable characters from input XMLs
 	- improved summary a bit
 	- "called within reset scope by" errors did not include stderr
+	- added hard-coded "runtime error:" reporting for now (only generated by UndefinedBehaviorSanitizer)
